Cleaned up some of the bootstrap grid code and fixed some of the alignment issues iwth the toggle buttons (but now that has highlighted that there are some alignment issues with the US map

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,10 @@ body {
 }
 
 .toggle-button {
-	width: 120px;
+	/*max-width: 120px;*/
+	/*min-width: 40%;*/
+	width: 50%;
+	/*max-width: 140px;*/
 	margin-left: 0px;
 	margin-right: 0px;
 
@@ -42,7 +45,11 @@ body {
 }
 
 .btn-group {
+	/*width: 100%;*/
+	max-width: 250px;
+	margin: auto;
 	margin-top: 20px;
+	width: 100%;
 }
 
 .btn {
